# cv

./: .dockerignore  .drone.yml  .drone.yml.sig  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.dist  README.md  azure-pipelines.yml  build.rs  dev.js  index.html  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: azstaticapp.yml  azstorage.yml  azure-static-web-app.yml  azure-static-web-apps-purple-grass-08d6c3703.yml  azure-website.yml  docker-image.yml  docker-publish.yml  release.yml
Frontend/: bs-config.js  config.js  index.html  index.js  package.json
Frontend/src/: app.html  app.ts  main.ts
Frontend/styles/: initial.less  styles.css  styles.less
Frontend/typings/: highlight.pack.d.ts  highlightjs.d.ts  materialize.d.ts
Infrastructure/: deploy.yml  staging
Infrastructure/targets/: frontend.yml  load-balancer.yml
ansible/: deploy.yml  production  staging
ansible/group_vars/: all.yml
app/: config.js  gulpfile.js  index.html  package.json  webpack.config.js
app/resources/: farmtrack-cluster.gliffy
app/src/: app.html  app.ts  main.ts
app/styles/: styles.less
app/typings/: chartist.d.ts  moment.d.ts
docker/: nginx.conf
src/: app.ts  config.rs  config.yml  index.css  index.html  index.js  main.rs  store.ts
src/api/: bender.ts  helpers.ts  index.ts
src/components/: adjectives.ts  date.ts  dynamic-quote.ts  index.ts  job.html  job.ts  secret.ts
src/config/: adjectives.ts  index.ts
src/controls/: adjectives.rs  markdown.rs  mod.rs  picture.rs  quote.rs  tldr.rs
src/views/: home.ts  (+1 more)
(+129 files in other folders)
