[package]
name = "notheotherben"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
gloo = { version = "0.8" }
gloo-timers = { version = "0.2.6", features = ["futures"] }
markdown = "1.0.0-alpha.9"
rust-embed = { version = "6.7.0", features = ["debug-embed", "include-exclude"] }
serde = { version = "1.0.164", features = ["alloc", "derive"] }
serde_yaml = "0.9.21"
wasm-bindgen-futures = "0.4"
yew = { version = "0.20.0", features = ["csr"] }

[build-dependencies]
vergen = { version = "8.2.1", features = ["git", "gitcl"]}

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true