[package]
name = "notheotherben"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
gloo = { version = "0.11" }
gloo-timers = { version = "0.3.0", features = ["futures"] }
markdown = "1.0.0-alpha.16"
rust-embed = { version = "8.2.0", features = ["debug-embed", "include-exclude"] }
serde = { version = "1.0.193", features = ["alloc", "derive"] }
serde_yaml = "0.9.32"
wasm-bindgen-futures = "0.4"
yew = { version = "0.21.0", features = ["csr"] }

[build-dependencies]
vergen = { version = "8.3.1", features = ["git", "gitcl"]}

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true